Break words in code to prevent scrollbars

--- a/htdocs/includes/sass/partials/_code.scss
+++ b/htdocs/includes/sass/partials/_code.scss
@@ -1,5 +1,6 @@
 pre {
 	margin-top: 0;
+	word-wrap: break-word;
 }
 
 code {
